Tue May 10 14:52:32 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/prepare_warn.c:
	- add test from Sebastien Flaesch for cursor state

Sun May  8 18:37:44 EDT 2011	JK Lowden <jklowden@freetds.org>
	* configure.ac added AC_CONFIG_MACRO_DIR per autoconf warning
	* src/tds/query.c use varchar(4000) per ML patch from Ed Avis

Sat May  7 21:18:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sqlfront.h: compile fix for MingW

Sat May  7 21:00:35 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: detect correctly odbcss.h

Fri May  6 18:47:17 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdssrv.h src/odbc/odbc.c:
	* src/odbc/unittests/data.c src/server/login.c src/server/server.c:
	* src/tds/login.c src/tds/query.c src/tds/read.c src/tds/token.c:
	- fix version names from 8.0 to 7.1

Fri May  6 18:27:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ct.c src/ctlib/ctutil.c:
	* src/dblib/dblib.c src/tds/mem.c:
	- clean tds.h header

Thu Apr 28 17:02:05 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/token.c:
	- correct fix to detect tds 7.1 revision 1

Thu Apr 28 16:52:07 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: rollback patch for SQLTables

Thu Apr 28 14:20:24 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix for tds 7.1 revision 1 (mssql2k without SPs)

Thu Apr 28 09:54:55 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/tables.c: be more verbose

Mon Apr 25 13:59:52 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: use tinyint for column_type

Sun Apr 24 20:24:26 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/prepare_results.c:
	- fix problem preparing before binding parameters
