@@ -1,3 +1,6 @@
+Tue May 10 15:19:27 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/gssapi.c src/tds/token.c: fix Kerberos login
+
 Tue May 10 14:52:32 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
 	* src/odbc/unittests/prepare_warn.c:
@@ -103,4 +106,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3234 2011-05-10 12:53:07 freddy77 Exp $
+$Id: ChangeLog,v 1.3235 2011-05-10 13:19:49 freddy77 Exp $
